--- a/style.css
+++ b/style.css
@@ -1,1 +1,4 @@
 * {outline: 1px dotted red; background-color:black; color:white;}
+#mainPart {margin: auto; padding: 10px 10px 10px 10px;}
+#list {width: 450px; float: left;}
+#topTen {width: 450px; float: right;
